
- Testing: HTTPLayer calls tearDown on the request handler during testTearDown
  now.

- ObjectSequenceWidget and DropObjectWidget don't accept any draggable anymore,
  they offer a parameter to configure the accept setting instead. Clipboard and
  zeit.find annotate their draggables with the content types (#9390).

- Introduce ValidateCheckinEvent (#9406).


1.49.2 (unreleased)
-------------------

- Nothing changed yet.


1.49.1 (2011-06-21)
-------------------

- Fix product source so it works in the face of SecurityProxies (#9231).


1.49.0 (2011-06-20)
-------------------

- Add SourceFactory helper for sources with a small set of fixed values (for
  #8953).

- Change ICommonMetadata.product_id to be a product object with id, title and
  VGWort-Code (for #9033).

1.48.0 (2011-03-23)
-------------------

- Generalised how checkout/checkin works so it also works for non-dav content
  (for #7826)

- Added IDAVContent for content from the original repository. This is to
  separate it from content from other repositories (like brightcove) (for
  #7826).

- Made locking support optional (for #7826)

- A view on workingcopy objects used to lookup objects directly in the
  repository. Replaced this by an ICMSContent() adapter lookup (for #7826)

- Improve HTTP test layer: stores errors in a list instead of printing them
  (for #8085).


1.47.0 (2010-08-16)
-------------------

- Add detail url to access counter (#7860).



1.46.0 (2010-08-09)
-------------------

- Make sure indexing referencing object doesn't break when there is change in
  the list duinng iteration (#7635).
- Use gocept.selenium to run selenium tests (#7549).
- Remove the automatic syndication of articles with serie 'News' to a news
  channel.


1.45.0 (2010-07-07)
-------------------

- Fix test isolation problem (#7467).
- Removed assignment of UUIDs, this is handled by the DAV-Server now (#7366).
- Added trackeback info to publish/rectract tasks (#7443).