@@ -115,7 +115,7 @@ class CheckoutManager(object):
         return True
 
     def checkin(self, event=True, semantic_change=False,
-                ignore_conflicts=False):
+                ignore_conflicts=False, publishing=False):
         if not self.canCheckin:
             reason = self.last_validation_error
             if reason is None:
@@ -131,7 +131,7 @@ class CheckoutManager(object):
         if event:
             zope.event.notify(
                 zeit.cms.checkout.interfaces.BeforeCheckinEvent(
-                    self.context, workingcopy, self.principal))
+                    self.context, workingcopy, self.principal, publishing))
         if ignore_conflicts:
             adapter_name = u'non-conflicting'
         else:
@@ -144,7 +144,7 @@ class CheckoutManager(object):
         if event:
             zope.event.notify(
                 zeit.cms.checkout.interfaces.AfterCheckinEvent(
-                    added, workingcopy, self.principal))
+                    added, workingcopy, self.principal, publishing))
         lockable = zope.app.locking.interfaces.ILockable(added, None)
         if lockable is not None:
             try:
